Fixed layout to try and address mobile bug, still need to fix scrollbar issue

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -9,7 +9,7 @@ a {
     font-family: monospace;
     font-variant: small-caps;
     font-weight: bold;
-    font-size: 25px;
+    font-size: 20pt;
 }
 a:hover {
     color: black;
@@ -56,9 +56,38 @@ ul li:before {
 }
 
 
+table {
+    width: 1000px;
+    height: 240px;
+}
+td#img {
+    width: 300px;
+}
+td#myname {
+    text-align: right;
+    vertical-align: bottom;
+    padding-right: 25px;
+    padding-bottom: 20px;
+    font-size: 30pt;
+    font-weight: bold;
+    font-family: monospace;
+}
+td.links {
+    padding-top: 20px;
+    padding-left: 50px;
+    width: 250px;
+    line-height: 2.5em;
+}
+
+
+.outer-container {
+    text-align: center;
+}
+
+
 .container {
     display: inline-block;
-    transform: translateX(50%);
+    margin: 0px auto;
 	width: 1000px;
 	max-width: 100%;
 	margin-top: 50px;
@@ -66,53 +95,17 @@ ul li:before {
 }
 
 
-.top-left-div {
-    float: left;
-    width: 300px;
-    height: 225px;
-}
-.top-left-div img {
-    width: 300px;
-	height: 225px;
-}
-
-
-.top-right-div {
-    float: left;
-    width: 650px;
-    height: 175px;
-    padding-top: 50px;
-    padding-left: 50px;
+.top-div {
     background-color: #C4C4C4;
-    line-height: 2.5em;
-}
-.top-right-div .links {
-    top: 50px;
-    left: 50px;
     text-align: left;
+    height: 240px;
 }
-.top-right-div p {
+.top-div p {
     text-align: right;
-    float: right;
     padding-right: 25px;
     font-size: 30pt;
     font-weight: bold;
     font-family: monospace;
-}
-
-
-.div-separator {
-    clear: both;
-    top: 225px;
-    left: 5px;
-    right: 5px;
-    height: 5px;
-    background-color: #C4C4C4;
-}
-
-
-.bottom-div {
-    clear: both;
 }
 
 
